--- a/drinking_index.html
+++ b/drinking_index.html
@@ -248,7 +248,7 @@
 //<p style="text-align:left; font-weight:bold">Hover for source</p>'
 
     var layers = {  
-            'contaminants' : [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminants&maxFeatures=100000&outputFormat=application%2Fjson', {
+            'contaminants' : [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminants&maxFeatures=100000&outputFormat=application%2Fjson', {
             	pointToLayer: function (feature, latlng) {
     			return L.circleMarker(latlng, {
     				color: contaminant_level(feature.properties.MOD_RISK),
@@ -260,7 +260,7 @@
     					).bindTooltip(feature.properties.PCS_NAME, {className: 'label_tooltip'});
     				}
 				}), legend_contaminants],
-			'bottle': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:bottled_water&maxFeatures=100&outputFormat=application%2Fjson', {
+			'bottle': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:bottled_water&maxFeatures=100&outputFormat=application%2Fjson', {
 					pointToLayer: function (feature, latlng) {
             				var bottleIcon = new L.Icon({
             						iconUrl: 'img/bottle.png',
@@ -273,7 +273,7 @@
                 			layer.bindTooltip(feature.properties.Name, {className: 'label_tooltip', sticky: true});
             		}
     			}),legend_bottle],	
-    		'grid1': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminant_point_grid&maxFeatures=10000&outputFormat=application%2Fjson', {
+    		'grid1': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:contaminant_point_grid&maxFeatures=10000&outputFormat=application%2Fjson', {
     				pointToLayer: function (feature, latlng) {
     					return L.circleMarker(latlng, 
     						{
@@ -286,7 +286,7 @@
 							}
 								).bindTooltip('Contaminants: ' + feature.properties.NUMPOINTS, {opacity: setOpacity(feature.properties.level, 1), className: 'label_tooltip'});}
     			}),legend_grid],	
-            'surface': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_sw&maxFeatures=500&outputFormat=application%2Fjson',
+            'surface': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_sw&maxFeatures=500&outputFormat=application%2Fjson',
             	{style:surface_style, onEachFeature: function(feature, featureLayer) {
         			featureLayer.bindTooltip(feature.properties.PWS_NAME, {className: 'label_tooltip'});
         			featureLayer.on({
@@ -295,7 +295,7 @@
         				})
     			}}
             	), legend_sw],
-            'ground': [L.geoJson.ajax('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_gw&maxFeatures=10000&outputFormat=application%2Fjson',
+            'ground': [L.geoJson.ajax('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=baldricg_atlas:drinking_gw&maxFeatures=10000&outputFormat=application%2Fjson',
             	{style:ground_style, onEachFeature: function(feature, featureLayer) {
         			featureLayer.bindTooltip(feature.properties.TINWSYS_NA, {className: 'label_tooltip'});
     			}}
