--- a/water_use_index.html
+++ b/water_use_index.html
@@ -378,7 +378,7 @@
               minZoom: 6,
               continuousWorld: true
               }), legend_mining],
-          'domestic' : [L.tileLayer.wms('https://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/wms', {
+          'domestic' : [L.tileLayer.wms('http://mapious.ceoas.oregonstate.edu/geoserver/baldricg_atlas/wms', {
               layers: 'baldricg_atlas:water_use_domestic',
               tiled: true,
               format: 'image/png',
