--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h4>
                     <a  href="water_use_index.html" target="_blank">Conflict</a>
                 </h4>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">Umatilla, Klamath</p>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">water rights, shortages, Umatilla, Klamath</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
