--- a/groundwater_index.html
+++ b/groundwater_index.html
@@ -551,7 +551,7 @@ function otherStyle(feature) {
             conservation_critical: {lat: 44.1347254, lng:-122.7411479, zoom: 7, name:'Conservation', layers:['conservation_critical']},
             conservation_management: {lat: 44.1347254, lng:-122.7411479, zoom: 7, name:'Management', layers:['conservation_management']},
             county_use: {lat: 44.1347254, lng:-122.7411479, zoom: 7, name:'County Use', layers:['counties']},
-            irrigation_aquifers: {lat: 44.1347254, lng:-122.7411479, zoom: 7, name:'Irrigation', layers:['irrigation_points','irrigation']},
+            irrigation_aquifers: {lat: 44.1347254, lng:-122.7411479, zoom: 7, name:'Irrigation', layers:['elevation2','irrigation_points','irrigation']},
             end: {lat: 44.1347254, lng:-122.7411479, zoom: 7, name:'End', position:'fullpage'}
     };
     
